# SmalfilmsGrabber

./: .gitignore  CMakeLists.txt  main.cpp  opencvdemo.cpp  readme.md  smalfilmsgrabber.cpp  smalfilmsgrabber.h
